cmake_minimum_required(VERSION 4.0)
project(my_lsm_)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(${source_files} ${CMAKE_CURRENT_SOURCE_DIR}/src)
add_executable(${PROJECT_NAME} main.cpp  )
target_include_directories(${PROJECT_NAME}  PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/include)